    o #972620 by dereine: Add an administrative title field for all handlers to make it more possible to distinguish similar fields from each other in the UI.
    o #627378: Allow specifying that your module provides specialized views templates via hook_views_api.
    o #627378 follow up: Remove debug calls.
    o #1001442 by dboulet: Add classes/title text to contextual links.
    o #999042 by bojanz: Remove the option to use the site mission for the RSS feed description, because drupal doesn't have this field anymore.
    o #985602 by bblake, bojanz, dereine: Support slave server.
    o by dereine: Fix views.info file.
    o #987478 by bojanz: Let field field handler properly handle field language.
    o #1002060 by troky: COMMENT_NODE_* constants have new names
    o #996306 by alex_b: Respect 'edit terms in ' settings
    o #987478 by bojanz: Fix some more edge cases in field field handler.
    o #1003034 by das-peter: Use preg_slit instead of split.
    o #905712 by dagmar: Add Published/Not published as text options to published field.
    o #816354 by dereine: Provide a field to create administrative comments on displays.
    o #1004596 by pillarsdotnet:  Wrong usage of theme('image'...) in contact field handler.
    o #1006088 by aspilicious: Remove unneeded files from .info file.
    o #1005662 by troky: Change original hook to base hook in views hook_theme.
    o #808016 by dereine: Clarify short/medium/long date formats.
    o #829928 by gordon: Allow strip tags to get a list of tags to keep.
    o #1004538 by ngmaloney, bojanz: Support timestamps before 1970 in views date sql.
    o #522318 by dereine: Provide a "human readable" name for all Views.
    o #1003112 by ralf: Add configure line to views_ui.info
    o #118672: Allow an OR in filters by adding groups in the filter UI.
    o by dereine: Add a test for field math, and fix the field math :)
    o #1007036 by bojanz: Fix Node: Has new content filter.